--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
 			<h1> Discover the world </h1>
 			<h2> Better experiences for a better life </h2>
-			<a href="#apply-sectio" class="button_main"> Explore</a>
+			<a href="#apply-section" class="button_main"> Reservation</a>
 		</div>
 	</div>
 		
